import java.util.ArrayList;
import java.util.Arrays;

public class Main {




    public static void main(String[] args) {

     StartMenu start = new StartMenu();
     start.RunMenu();




    }




    
}